--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -11,7 +11,7 @@
         <intent
             android:action="android.intent.action.MAIN"
             android:targetClass="org.meowcat.edxposed.manager.ModulesActivity"
-            android:targetPackage="org.meowcat.edxposed.manager"></intent>
+            android:targetPackage="org.meowcat.edxposed.manager" />
     </shortcut>
 
     <shortcut
@@ -24,7 +24,7 @@
         <intent
             android:action="android.intent.action.MAIN"
             android:targetClass="org.meowcat.edxposed.manager.DownloadActivity"
-            android:targetPackage="org.meowcat.edxposed.manager"></intent>
+            android:targetPackage="org.meowcat.edxposed.manager" />
     </shortcut>
 
 </shortcuts>
