--- a/app/src/main/res/layout/item_version.xml
+++ b/app/src/main/res/layout/item_version.xml
@@ -6,6 +6,8 @@
     android:paddingStart="16dp"
     android:paddingTop="11dp"
     android:paddingEnd="16dp"
+    android:clipToPadding="false"
+    android:clipChildren="false"
     android:paddingBottom="11dp">
 
     <LinearLayout
@@ -66,6 +68,7 @@
     <org.meowcat.edxposed.manager.widget.DownloadView
         android:id="@+id/downloadView"
         android:layout_width="match_parent"
+        android:clipChildren="false"
         android:layout_height="wrap_content" />
 
     <TextView
